--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -20,7 +20,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
                 <th scope="col">Описание</th>
-                <th scope="col">Дата и время просмотра</th>
+                <th scope="col">Дата и время создания</th>
             </tr>
             </thead>
             <tbody>
