--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -30,18 +30,20 @@
     <div class="container">
         <form class="mt-3">
             <div class="mb-3">
+                <label for="title" class="form-label"><b>Фамилия Имя</b></label>
+                <input type="text" class="form-control" id="name" placeholder="Введите фамилю и имя, например Иванов Иван">
                 <label for="title" class="form-label"><b>Название</b></label>
-                <input type="text" class="form-control" id="title" placeholder="Предлагая должность, например, Ведущий Java разработчик">
+                <input type="text" class="form-control" id="title" placeholder="Желаемая должность, например, Ведущий Java разработчик">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
-                <textarea class="form-control" id="description" rows="25" placeholder="Опишите требования к кандидату"></textarea>
+                <textarea class="form-control" id="description" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
                 <div class="col-6">
                     <div class="row">
-                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/vacancies}">Отмена</a></div>
+                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/candidates}">Отмена</a></div>
                         <div class="col-6"><button class="btn btn-primary w-100" type="submit">Сохранить</button>
                         </div>
                     </div>
