--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Создание вакансии</title>
+    <title>Создание резюме</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -22,22 +22,22 @@
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
+                    <a class="nav-item nav-link active" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3">
+        <form class="mt-3" th:action="@{/candidates/create}" method="post">
             <div class="mb-3">
-                <label for="title" class="form-label"><b>Фамилия Имя</b></label>
-                <input type="text" class="form-control" id="name" placeholder="Введите фамилю и имя, например Иванов Иван">
+                <label for="name" class="form-label"><b>Фамилия Имя</b></label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Введите фамилю и имя, например Иванов Иван">
                 <label for="title" class="form-label"><b>Название</b></label>
-                <input type="text" class="form-control" id="title" placeholder="Желаемая должность, например, Ведущий Java разработчик">
+                <input type="text" class="form-control" id="title" name="title" placeholder="Желаемая должность, например, Ведущий Java разработчик">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
-                <textarea class="form-control" id="description" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
+                <textarea class="form-control" id="description" name="description" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
