--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Список кандидатов</title>
+    <title>Редактирование резюме</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -21,33 +21,33 @@
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link active" th:href="@{/candidates}">Кандидаты</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Имя</th>
-                    <th scope="col">Навыки</th>
-                    <th scope="col">Дата создания</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="candidate: ${candidates}">
-                    <td th:text="${candidate.id}"/>
-                    <td><a th:text="${candidate.name}" th:href="@{/candidates/{candidateId}(candidateId=${candidate.id})}"></a></td>
-                    <td><a th:text="${candidate.description}"/>
-                    <td th:text="${candidate.creationDate}"/>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}">
+            <input type="hidden" name="id" th:field="*{id}">
+            <div class="mb-3">
+                <label for="name" class="form-label"><b>Фамилия Имя</b></label>
+                <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Введите фамилю и имя, например Иванов Иван">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label"><b>Описание</b></label>
+                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-6"></div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-4"><a class="btn btn-light w-100" th:href="@{/candidates}">Отмена</a></div>
+                        <div class="col-4"><a class="btn btn-danger w-100" th:href="@{/candidates/delete/{id}(id=${candidate.id})}">Удалить</a></div>
+                        <div class="col-4"><button class="btn btn-success w-100" type="submit">Обновить</button></div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 </body>
