--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
     <title>Создание резюме</title>
 </head>
 <body>
@@ -17,12 +20,15 @@
         <div class="container">
             <a class="navbar-brand" href="/">Job4jDreamJob</a>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link active" th:href="@{/candidates/create}">Создать резюме</a>
+                </div>
+                <div class="d-flex">
+                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
                 </div>
             </div>
         </div>
@@ -30,18 +36,18 @@
     <div class="container">
         <form class="mt-3" th:action="@{/candidates/create}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="name" class="form-label"><b>Фамилия Имя</b></label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Введите фамилю и имя, например Иванов Иван">
-                <label for="title" class="form-label"><b>Название</b></label>
-                <input type="text" class="form-control" id="title" name="title" placeholder="Желаемая должность, например, Ведущий Java разработчик">
+                <label for="name" class="form-label"><b>Имя и фамилия</b></label>
+                <input type="text" class="form-control" id="name" name="name"
+                       placeholder="Введите имя и фамилию, например, Иван Иванов">
             </div>
             <div class="mb-3">
                 <label for="formFile"><b>Фото</b></label>
                 <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required>
             </div>
             <div class="mb-3">
-                <label for="description" class="form-label"><b>Описание</b></label>
-                <textarea class="form-control" id="description" name="description" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
+                <label for="description" class="form-label"><b>Навыки</b></label>
+                <textarea class="form-control" id="description" name="description" rows="25"
+                          placeholder="Перечислите технологии, которыми владеет кандидат, например, SpringBoot"></textarea>
             </div>
             <div class="mb-3">
                 <label for="city"><b>Город</b></label>
@@ -54,7 +60,8 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/candidates}">Отмена</a></div>
-                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                        <div class="col-6">
+                            <button class="btn btn-primary w-100" type="submit">Сохранить</button>
                         </div>
                     </div>
                 </div>
