--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
     <title>Редактирование резюме</title>
 </head>
 <body>
@@ -17,17 +20,22 @@
         <div class="container">
             <a class="navbar-brand" href="/">Job4jDreamJob</a>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
-                    <a class="nav-item nav-link active" th:href="@{/candidates}">Кандидаты</a>
+                    <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
+                </div>
+                <div class="d-flex">
+                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}">
+        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}"
+              enctype="multipart/form-data">
             <input type="hidden" name="id" th:field="*{id}">
             <input type="hidden" name="fileId" th:field="*{fileId}">
             <div class="row mb-3">
@@ -41,42 +49,34 @@
                 </div>
                 <div class="col-9">
                     <div class="mb-3">
-                        <label for="title" class="form-label"><b>Название</b></label>
-                        <input type="text" class="form-control" id="title" name="title" th:field="*{title}" placeholder="Предлагая должность, например, Ведущий Java разработчик">
+                        <label for="name" class="form-label"><b>Имя и фамилия</b></label>
+                        <input type="text" class="form-control" id="name" name="title" th:field="*{name}"
+                               placeholder="Введите имя и фамилию, например, Иван Иванов">
                     </div>
                     <div class="mb-3">
                         <label for="city"><b>Город</b></label>
                         <select class="form-control" id="city" name="cityId">
-                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
+                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"
+                                    th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
                         </select>
-                    </div>
-                    <div class="form-check mb-3">
-                        <input type="checkbox" name="visible" class="form-check-input" id="visible" th:field="*{visible}">
-                        <label class="form-check-label" for="visible">Опубликовать</label>
                     </div>
                 </div>
             </div>
             <div class="mb-3">
-                <label for="name" class="form-label"><b>Фамилия Имя</b></label>
-                <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Введите фамилю и имя, например Иванов Иван">
-            </div>
-            <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
-                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Опишите свои навыки java программирования"></textarea>
-            </div>
-            <div class="mb-3">
-                <label for="city"><b>Город</b></label>
-                <select class="form-control" id="city" name="cityId">
-                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
-                </select>
+                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25"
+                          placeholder="Перечислите технологии, которыми владеет кандидат, например, SpringBoot"></textarea>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4"><a class="btn btn-light w-100" th:href="@{/candidates}">Отмена</a></div>
-                        <div class="col-4"><a class="btn btn-danger w-100" th:href="@{/candidates/delete/{id}(id=${candidate.id})}">Удалить</a></div>
-                        <div class="col-4"><button class="btn btn-success w-100" type="submit">Обновить</button></div>
+                        <div class="col-4"><a class="btn btn-danger w-100"
+                                              th:href="@{/candidates/delete/{id}(id=${candidate.id})}">Удалить</a></div>
+                        <div class="col-4">
+                            <button class="btn btn-success w-100" type="submit">Обновить</button>
+                        </div>
                     </div>
                 </div>
             </div>
