--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -24,7 +24,8 @@
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-item nav-link active me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
                 </div>
             </div>
     </nav>
